--- a/index.html
+++ b/index.html
@@ -117,7 +117,10 @@
         </div>
         <div class="row">
           <div class="col-lg-12">
-            <h4>Available Limit: SGD 10,000 </h4>
+            <h4>Credit Limit</h4>
+          </div>
+          <div class="col-lg-12">
+            <div id="chart" style="min-width: 200px; height: 200px; margin: 0 auto"></div>
           </div>
         </div>
         <div class="row">
@@ -136,7 +139,7 @@
         </div>
         <div class="row">
           <div class="col-lg-12">
-            <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h5>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           </div>
         </div>
 
@@ -240,20 +243,38 @@
                         <td>SGD 19.00</td>
                       </div>
                     </tr>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td><h4>Total Selected Amount </h4></td>
+                        <td><h4>SGD 900.00</h4></td>
+                    </tr>
                 </tbody>
               </table>
             </div>
           </div>
         </div>
-
+        <div class="row">
+          <div class="col-lg-10">
+            <button class="btn btn-lg btn-default pull-right">Next</button>
+          </div>
+        </div>
       </div>
     </div>
   </div>
   <!-- oooh the Game Ends here-->
+  <!--The End is here -->
+  <footer class="footer">
+      <div class="container">
+        <p class="text-muted">Place sticky footer content here.</p>
+      </div>
+  </footer>
+  <!--The End -->
   <script src="lib/jquery/js/jquery.min.js"></script>
   <script src="lib/bootstrap/js/bootstrap.min.js"></script>
   <script src="http://cdn.jsdelivr.net/icheck/1.0.2/icheck.min.js"></script>
-  <script>
+  <script src="http://code.highcharts.com/highcharts.js"></script>
+<script>
 $(document).ready(function(){
   $('input').iCheck({
     checkboxClass: 'icheckbox_square-blue',
@@ -261,6 +282,57 @@ $(document).ready(function(){
     increaseArea: '20%' // optional
   });
 });
+$(function() {
+        // Create the chart
+        Highcharts.setOptions({colors: ['#1abc9c', '#3498db',]});
+        chart = new Highcharts.Chart({
+            chart: {
+                renderTo: 'chart',
+                type: 'pie',
+                margin: 0
+            },
+            title: null,
+            yAxis: {
+                title: {
+                    text: 'Total percent market share'
+                }
+            },
+            credits: {
+              enabled: false
+            },
+            legend:{
+              layout: 'horizontal'
+            },
+            plotOptions: {
+                pie: {
+                  slicedOffset: 0,
+                  size:'100%',
+                  shadow: false,
+                  dataLabels: {
+                        enabled: false
+                      }
+
+                }
+            },
+            tooltip: {
+                formatter: function() {
+                    return '<b>'+ this.point.name +'</b>: '+ this.y +' %';
+                }
+            },
+            series: [{
+                name: 'Browsers',
+                data: [["Available Limit",6],["Used Limt",4]],
+                size: '80%',
+                innerSize: '60%',
+                showInLegend:true,
+                dataLabels: {
+                    enabled: false
+                }
+            }]
+        });
+    });
 </script>
+
 </body>
 </html>
+
