--- a/index.html
+++ b/index.html
@@ -97,35 +97,22 @@
   <!-- oooh the Game starts here-->
   <div class="container-fluid">
     <div class="row">
-      <div class="col-lg-3">
+      <div class="col-lg-3 col-sm-hide">
         <div class="panel panel-default">
           <div class="panel-body">
         <div class="row">
-          <div class="col-lg-12">
-            <h3>Hello Alex</h3>
+          <div class="col-lg-12 col-md-6 col-sm-6">
+            <h4>Hello ALEX</h4>
           </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-12">
+          <div class="col-lg-12 col-md-6 col-sm-6 pull-sm-center pull-md-center pull-xs-left">
             <h4>CITI REWARDS CARD 7745 </h4>
           </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-12">
+          <div class="col-lg-12 col-md-6 col-sm-6 pull-xs-center pull-lg-center">
             <img id="cardface" src="images/Card.jpg"></img>
-            </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-12">
-            <h4>Credit Limit</h4>
           </div>
-          <div class="col-lg-12">
+          <div class="col-lg-12 col-md-6 col-sm-6">
             <div id="chart" style="min-width: 200px; height: 200px; margin: 0 auto"></div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-12">
-            <h4>Reward Points: 10,000</h4>
+            <div class="text-center"><span class="label label-primary">Used Limit</span><span class="label label-success">Available Limit</span></div>
           </div>
         </div>
       </div>
@@ -137,9 +124,10 @@
             <h3>Equal Payment Plan</h3>
           </div>
         </div>
+        <form action="/step2.html">
         <div class="row">
           <div class="col-lg-12">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h5>
           </div>
         </div>
 
@@ -256,9 +244,10 @@
         </div>
         <div class="row">
           <div class="col-lg-10">
-            <button class="btn btn-lg btn-default pull-right">Next</button>
+            <button type="submit" class="btn btn-default btn-lg  pull-right">Next</button>
           </div>
         </div>
+      </form>
       </div>
     </div>
   </div>
@@ -311,7 +300,6 @@ $(function() {
                   dataLabels: {
                         enabled: false
                       }
-
                 }
             },
             tooltip: {
@@ -324,7 +312,7 @@ $(function() {
                 data: [["Available Limit",6],["Used Limt",4]],
                 size: '80%',
                 innerSize: '60%',
-                showInLegend:true,
+                showInLegend:false,
                 dataLabels: {
                     enabled: false
                 }
@@ -335,4 +323,3 @@ $(function() {
 
 </body>
 </html>
-
