--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -9,17 +9,15 @@
     <meta name="description" content="Free Coding Tutorial">
     <meta name="author" content="VJ">
 
-    <title>Code Canopy</title>
+    <title>Dashboard</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
 
     <!-- Custom Fonts -->
-    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href='http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-    <link href="css/main.css" rel="stylesheet">
+
+    <link href="css/dashboard.css" rel="stylesheet">
 
 
 
@@ -74,16 +72,32 @@
   <div class="col-lg-3">
   </div>
   <div class="col-lg-9">
+    <div class="col-lg-12 hidden-xs hidden-sm padding-custom">
+      <a  href="#"><img class="banner" src="/images/banner.jpg"></a>
+    </div>
+    <div class="col-lg-12">
+      <div class="panel panel-default">
+        <div class="panel-body">
+            <h3>Credit Cards</h3>
+            <hr class="custom-hr">
+            <div class="col-lg-6 col-md-4 col-sm-4"><h5>Citi Prestige Card <br>XXXX XXXX XXXX 7865</h5></div>
+            <div class="col-lg-3 col-md-4 col-sm-4"><h5>Available Limit <br>3057.00 SGD</h5></div>
+            <div class="col-lg-3 col-md-4 col-sm-4"><h5>Outstanding Balance <br>1000.00 SGD</h5></div>
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><hr></div>
+            <div class="col-lg-6 col-md-4 col-sm-4"><h5>Citi Rewards Card <br>XXXX XXXX XXXX 7345</h5></div>
+            <div class="col-lg-3 col-md-4 col-sm-4"><h5>Available Limit <br>5657.00 SGD</h5></div>
+            <div class="col-lg-3 col-md-4 col-sm-4"><h5>Outstanding Balance <br>878.00 SGD</h5></div>
+          </div>
+        </div>
+    </div>
     <div class="col-lg-12">
       <div class="panel panel-default">
         <div class="panel-body">
             <h3>Deposits</h3>
-            <hr>
-            <div class="col-lg-6"><h4>Citi Prestige Card XXXXXXX7865</h4></div>
-            <div class="col-lg-6"><h4>3057.00 SGD</h4></div>
-            
-            <div class="col-lg-6"><h4>Citi Rewards Card XXXXXXX7345</h4></div>
-            <div class="col-lg-6"><h4>3457.00 SGD</h4></div>
+            <hr class="custom-hr">
+            <div class="col-lg-6 col-md-4 col-sm-4"><h5>Savings Account</h5></div>
+            <div class="col-lg-3 col-md-4 col-sm-4"><h5>X XXX XXX7 890</h5></div>
+            <div class="col-lg-3 col-md-4 col-sm-4"><h5>1000.00 SGD</h5></div>
           </div>
         </div>
     </div>
@@ -91,15 +105,7 @@
       <div class="panel panel-default">
         <div class="panel-body">
             <h3>Investments</h3>
-            <hr>
-          </div>
-        </div>
-    </div>
-    <div class="col-lg-12">
-      <div class="panel panel-default">
-        <div class="panel-body">
-            <h3>Cards</h3>
-            <hr>
+            <hr class="custom-hr">
           </div>
         </div>
     </div>
@@ -107,7 +113,7 @@
       <div class="panel panel-default">
         <div class="panel-body">
             <h3>Loans</h3>
-            <hr>
+            <hr class="custom-hr">
           </div>
         </div>
     </div>
